feat(KeyCloak): Use UserRepository
Migrate KeyCloak-SW360 Database Communication to Direct CouchDB Access
via UserRepository.

Authored-by: Bibhuti Dash <bibhuti.dash@siemens.com>
Co-Authored-by: Gaurav Mishra <mishra.gaurav@siemens.com>
Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>